syntax = "proto3";

package account.v1;

option go_package = "./;accountpb";

import "account/v1/account.proto";

service AccountService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
    rpc SignIn(SignInRequest) returns (SignInResponse) {};
    rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse) {};
    rpc SignOut(SignOutRequest) returns (SignOutResponse) {};
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message SignUpResponse {
    User user = 1;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokensRequest {
    string refresh_token = 1;
}

message RefreshTokensResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message SignOutRequest {
    string refresh_token = 1;
}

message SignOutResponse {}